kubernetes/main/core/flux-system/fluxcd/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluxcd-webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: ext.${DOMAIN}
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host flux-webhook.${DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
